--- a/program-service/src/main/resources/application.yml
+++ b/program-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: exercise-setting-service
+    name: program-service
 
   datasource:
     url: jdbc:mysql://localhost:3306/gaenari?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
