:sparkles: feat : 대시보드를 위한 라이브러리 설치

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
+  draggable_bottom_sheet: ^1.0.2 # 대시보드에서 쓰는 드래그되는 시트 라이브러리
 
 dev_dependencies:
   flutter_test:
