:sparkles: feat : 설정 screen 제작

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/bottom/
+    - assets/emoji/
+
   fonts:
     - family: TheJamsil
       fonts:
