--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -26,6 +26,9 @@ ext {
 }
 
 dependencies {
+	/* Adding for Swagger document integration */
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
+
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	compileOnly 'org.projectlombok:lombok'
