:sparkles: feat: swagger 통합 문서화 설정

--- a/member-service/src/main/resources/application-prod.yml
+++ b/member-service/src/main/resources/application-prod.yml
@@ -26,3 +26,11 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://eureka.gaenari.kr/eureka
+
+springdoc:
+  api-docs:
+    enabled: true
+    version: openapi_3_1
+  enable-spring-security: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
