--- a/gateway-service/src/main/resources/application-prod.yml
+++ b/gateway-service/src/main/resources/application-prod.yml
@@ -40,7 +40,7 @@ spring:
             - Method=POST
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/api/member-service/(?<segment>.*), /member-service/$\{segment}
+            - RewritePath=/api/member-service/(?<path>.*), /$\{path}
         - id: member-service
           uri: http://member-service.member.svc.cluster.local
           predicates:
@@ -48,7 +48,7 @@ spring:
             - Method=POST
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/api/member-service/(?<segment>.*), /member-service/$\{segment}
+            - RewritePath=/api/member-service/(?<path>.*), /$\{path}
         - id: member-service
           uri: http://member-service.member.svc.cluster.local
           predicates:
@@ -56,7 +56,7 @@ spring:
             - Method=GET
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/api/member-service/(?<segment>.*), /member-service/$\{segment}
+            - RewritePath=/api/member-service/(?<path>.*), /$\{path}
         - id: inventory-service
           uri: http://inventory-service.inventory.svc.cluster.local
           predicates:
