--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   draggable_bottom_sheet: ^1.0.2 # 대시보드에서 쓰는 드래그되는 시트 라이브러리
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
