--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -35,7 +35,21 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// Config
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	// Bootstrap
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+	// Actuator
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// Bus
+	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
 }
 
 dependencyManagement {
