--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.3
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
+  go_router: ^14.0.2
 
 dev_dependencies:
   flutter_test:
