:bug: fix : route 정보 수정

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 	// Actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	// Bus
-	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 
 }
 
