--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
   go_router: ^14.0.2
+  flutter_secure_storage: ^9.0.0 # 로그인유지 및 토큰 저장을 위한 라이브러리
+  jwt_decode: ^0.3.1 # 일단 해야함
 
 dev_dependencies:
   flutter_test:
