--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^14.0.2
   flutter_secure_storage: ^9.0.0 # 로그인유지 및 토큰 저장을 위한 라이브러리
   jwt_decode: ^0.3.1 # 일단 해야함
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
