--- a/exercise-record-service/build.gradle
+++ b/exercise-record-service/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     // Openfeign
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+//	// Kafka
+//	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
