--- a/exercise-record-service/src/main/resources/application.yml
+++ b/exercise-record-service/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     url: jdbc:mysql://gaenari.kr:30036/my_database?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
     username: root
     password: Ssafy123!@
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
