--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -97,6 +97,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/api/inventory-service/(?<path>.*), /inventory-service/$\{path}
+            - AuthorizationHeaderFilter
         - id: program-service
           uri: lb://program-SERVICE
           predicates:
@@ -104,6 +105,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/api/program-service/(?<path>.*), /$\{path}
+            - AuthorizationHeaderFilter
         - id: exercise-record-service
           uri: lb://EXERCISE-RECORD-SERVICE
           predicates:
@@ -111,6 +113,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/api/exercise-record-service/(?<path>.*), /$\{path}
+            - AuthorizationHeaderFilter
         - id: challenge-service
           uri: lb://CHALLENGE-SERVICE
           predicates:
@@ -118,6 +121,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/api/challenge-service/(?<path>.*), /$\{path}
+            - AuthorizationHeaderFilter
 
 springdoc:
   swagger-ui:
